tests/conformance/snapshots/conformance__conformance__macaroon_attenuation_vectors__basic_attenuation_discharge.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
expression: discharge.to_binary()
---
[
    2,
    10,
    0,
    117,
    115,
    101,
    114,
    58,
    97,
    108,
    105,
    99,
    101,
    16,
    0,
    97,
    117,
    116,
    104,
    46,
    101,
    120,
    97,
    109,
    112,
    108,
    101,
    46,
    99,
    111,
    109,
    1,
    0,
    0,
    5,
    0,
    5,
    5,
    0,
    0,
    0,
    63,
    137,
    206,
    81,
    114,
    250,
    92,
    95,
    158,
    206,
    8,
    226,
    118,
    77,
    120,
    255,
    27,
    181,
    78,
    212,
    132,
    119,
    230,
    19,
    230,
    89,
    182,
    117,
    143,
    178,
    154,
    185,
]
