tests/conformance/snapshots/conformance__conformance__macaroon_attenuation_vectors__basic_attenuation_resource.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
expression: resource_attenuated.to_binary()
---
[
    2,
    9,
    0,
    100,
    97,
    116,
    97,
    58,
    114,
    101,
    97,
    100,
    16,
    0,
    115,
    101,
    114,
    118,
    105,
    99,
    101,
    47,
    100,
    97,
    116,
    97,
    45,
    97,
    112,
    105,
    2,
    0,
    0,
    9,
    0,
    1,
    16,
    39,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    15,
    0,
    7,
    12,
    0,
    47,
    97,
    112,
    105,
    47,
    117,
    115,
    101,
    114,
    115,
    47,
    42,
    105,
    215,
    149,
    180,
    206,
    128,
    48,
    155,
    44,
    245,
    233,
    220,
    110,
    41,
    117,
    144,
    14,
    213,
    64,
    2,
    104,
    152,
    247,
    191,
    95,
    194,
    196,
    108,
    48,
    88,
    92,
    235,
]
