tests/conformance/snapshots/conformance__conformance__macaroon_attenuation_vectors__basic_attenuation_root.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
expression: root_token.to_binary()
---
[
    2,
    9,
    0,
    100,
    97,
    116,
    97,
    58,
    114,
    101,
    97,
    100,
    16,
    0,
    115,
    101,
    114,
    118,
    105,
    99,
    101,
    47,
    100,
    97,
    116,
    97,
    45,
    97,
    112,
    105,
    0,
    0,
    191,
    32,
    48,
    145,
    202,
    149,
    225,
    97,
    32,
    192,
    114,
    198,
    97,
    135,
    112,
    232,
    156,
    3,
    15,
    12,
    183,
    91,
    170,
    74,
    45,
    216,
    52,
    182,
    86,
    237,
    213,
    116,
]
