tests/conformance/snapshots/conformance__conformance__macaroon_attenuation_vectors__basic_attenuation_third_party.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
expression: with_third_party.to_binary()
---
[
    2,
    9,
    0,
    100,
    97,
    116,
    97,
    58,
    114,
    101,
    97,
    100,
    16,
    0,
    115,
    101,
    114,
    118,
    105,
    99,
    101,
    47,
    100,
    97,
    116,
    97,
    45,
    97,
    112,
    105,
    3,
    0,
    0,
    9,
    0,
    1,
    16,
    39,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    15,
    0,
    7,
    12,
    0,
    47,
    97,
    112,
    105,
    47,
    117,
    115,
    101,
    114,
    115,
    47,
    42,
    1,
    16,
    0,
    97,
    117,
    116,
    104,
    46,
    101,
    120,
    97,
    109,
    112,
    108,
    101,
    46,
    99,
    111,
    109,
    10,
    0,
    117,
    115,
    101,
    114,
    58,
    97,
    108,
    105,
    99,
    101,
    32,
    0,
    119,
    166,
    78,
    52,
    51,
    230,
    242,
    188,
    109,
    105,
    164,
    209,
    84,
    71,
    155,
    64,
    211,
    144,
    225,
    20,
    255,
    104,
    173,
    12,
    128,
    218,
    196,
    219,
    91,
    22,
    223,
    156,
    231,
    78,
    128,
    182,
    168,
    200,
    50,
    207,
    157,
    123,
    111,
    109,
    255,
    29,
    62,
    94,
    239,
    160,
    16,
    120,
    79,
    2,
    116,
    217,
    45,
    5,
    188,
    143,
    37,
    232,
    17,
    59,
]
