tests/conformance/snapshots/conformance__conformance__macaroon_attenuation_vectors__comprehensive_token.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
expression: token.to_binary()
---
[
    2,
    18,
    0,
    99,
    111,
    109,
    112,
    114,
    101,
    104,
    101,
    110,
    115,
    105,
    118,
    101,
    58,
    116,
    101,
    115,
    116,
    6,
    0,
    115,
    121,
    115,
    116,
    101,
    109,
    9,
    0,
    0,
    9,
    0,
    1,
    80,
    195,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    9,
    0,
    2,
    16,
    39,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    9,
    0,
    3,
    123,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    9,
    0,
    4,
    200,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    5,
    0,
    5,
    10,
    0,
    0,
    0,
    0,
    12,
    0,
    7,
    9,
    0,
    47,
    97,
    112,
    105,
    47,
    118,
    49,
    47,
    42,
    0,
    9,
    0,
    8,
    20,
    0,
    0,
    0,
    44,
    1,
    0,
    0,
    0,
    23,
    0,
    6,
    11,
    0,
    101,
    110,
    118,
    105,
    114,
    111,
    110,
    109,
    101,
    110,
    116,
    7,
    0,
    115,
    116,
    97,
    103,
    105,
    110,
    103,
    1,
    13,
    0,
    118,
    97,
    108,
    105,
    100,
    97,
    116,
    111,
    114,
    46,
    115,
    118,
    99,
    11,
    0,
    102,
    105,
    110,
    97,
    108,
    58,
    99,
    104,
    101,
    99,
    107,
    32,
    0,
    229,
    152,
    128,
    249,
    101,
    239,
    242,
    109,
    177,
    224,
    67,
    224,
    52,
    49,
    159,
    135,
    148,
    177,
    147,
    210,
    160,
    241,
    0,
    209,
    176,
    143,
    96,
    132,
    220,
    0,
    132,
    54,
    252,
    70,
    64,
    84,
    241,
    217,
    14,
    78,
    192,
    230,
    84,
    124,
    198,
    151,
    181,
    138,
    213,
    199,
    228,
    60,
    13,
    226,
    179,
    143,
    19,
    134,
    202,
    40,
    51,
    22,
    154,
    26,
]
