tests/conformance/snapshots/conformance__conformance__macaroon_attenuation_vectors__nested_backend_discharge.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
expression: backend_discharge.to_binary()
---
[
    2,
    12,
    0,
    101,
    120,
    101,
    99,
    58,
    99,
    111,
    109,
    112,
    117,
    116,
    101,
    11,
    0,
    98,
    97,
    99,
    107,
    101,
    110,
    100,
    46,
    115,
    118,
    99,
    1,
    0,
    0,
    9,
    0,
    4,
    57,
    48,
    0,
    0,
    0,
    0,
    0,
    0,
    226,
    19,
    111,
    25,
    206,
    132,
    13,
    45,
    123,
    190,
    71,
    20,
    193,
    77,
    150,
    130,
    210,
    38,
    90,
    140,
    1,
    54,
    176,
    82,
    214,
    192,
    205,
    155,
    102,
    59,
    218,
    245,
]
